--- a/package.json
+++ b/package.json
@@ -11,9 +11,6 @@
       "server": "json-server --watch data/dummy.json --port 9000"
    },
    "dependencies": {
-      "@dnd-kit/core": "^6.1.0",
-      "@dnd-kit/modifiers": "^7.0.0",
-      "@dnd-kit/sortable": "^8.0.0",
       "@emotion/react": "^11.11.3",
       "@emotion/styled": "^11.11.0",
       "@fontsource/roboto": "^5.0.8",
@@ -26,6 +23,7 @@
       "react": "^18.2.0",
       "react-dom": "^18.2.0",
       "react-loader-spinner": "^6.1.6",
+      "react-query": "^3.39.3",
       "react-router": "^6.21.3",
       "react-router-dom": "^6.22.0",
       "uuid": "^9.0.1"
