--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
    "name": "kanban-todo",
+   "homepage": "https://tebesski.github.io/ToDoBoardsTest",
    "private": true,
    "version": "0.0.0",
    "type": "module",
@@ -8,7 +9,7 @@
       "build": "tsc && vite build",
       "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
       "preview": "vite preview",
-      "server": "json-server --watch data/dummy.json --port 9000"
+      "deploy": "gh-pages -d build"
    },
    "dependencies": {
       "@emotion/react": "^11.11.3",
@@ -18,12 +19,10 @@
       "@mui/material": "^5.15.7",
       "@mui/x-date-pickers": "^6.19.2",
       "@types/js-cookie": "^3.0.6",
-      "axios": "^1.6.7",
       "js-cookie": "^3.0.5",
       "react": "^18.2.0",
       "react-dom": "^18.2.0",
       "react-loader-spinner": "^6.1.6",
-      "react-query": "^3.39.3",
       "react-router": "^6.21.3",
       "react-router-dom": "^6.22.0",
       "uuid": "^9.0.1"
@@ -38,7 +37,7 @@
       "eslint": "^8.55.0",
       "eslint-plugin-react-hooks": "^4.6.0",
       "eslint-plugin-react-refresh": "^0.4.5",
-      "json-server": "^1.0.0-alpha.23",
+      "gh-pages": "^6.1.1",
       "typescript": "^5.2.2",
       "vite": "^5.0.8"
    }
