--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
       "react-loader-spinner": "^6.1.6",
       "react-router": "^6.21.3",
       "react-router-dom": "^6.22.0",
-      "uuid": "^9.0.1"
+      "uuid": "^9.0.1",
+      "dotenv": "^16.4.5",
    },
    "devDependencies": {
       "@types/react": "^18.2.43",
